<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <View
            android:id="@+id/userItemRow"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerVertical="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp">

            <TextView
                android:id="@+id/userItemRowItemName"
                android:text="Food Name"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"/>

            <LinearLayout
                android:id="@+id/layout_price"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/userItemRowItemPrice"
                    android:text="$ 1,000"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/food_price_seperator"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="|"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/userItemRowItemCaffeine"
                    android:layout_marginLeft="0dp"
                    android:text="255 mg of caffeine"
                    android:textColor="@color/colorPrimary"
                    android:textSize="13sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/userItemRowItemImage"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:src="@drawable/honey_green_milk_tea">
        </ImageView>



    </RelativeLayout>

</LinearLayout>