<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScroollView"
        android:layout_width="match_parent"
        android:layout_height="403dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cafe_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="12dp"
                    android:text="Cafe Name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="28sp" />

                <TextView
                    android:id="@+id/cafe_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="935 W 30th Street"
                    android:layout_marginStart="14dp">
                </TextView>

                <TextView
                    android:id="@+id/cafe_hours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="M-S 11:00 am - 12:00 am"
                    android:layout_marginStart="14dp">
                </TextView>

            </LinearLayout>




            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:id="@+id/ScrollView"
                android:background="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginTop="20dp"
                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@drawable/bgitems"
                    android:orientation="vertical">

                    <view
                        android:id="@+id/recycler_view"
                        class="androidx.recyclerview.widget.RecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="vertical"
                        android:layout_marginHorizontal="10dp"/>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/individualCafeMap"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/individualCafeDirectionsButtom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_directions_black_24dp"
        app:elevation="6dp"
        app:layout_anchor="@id/app_bar_layout"
        app:layout_anchorGravity="bottom|right|end"
        app:pressedTranslationZ="12dp"
        app:useCompatPadding="true" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
